Navigation_man, sitetools_main: fix text-overflow and scroll-x

--- a/resources/stylesheets/component/common/aside.navigation_main.less
+++ b/resources/stylesheets/component/common/aside.navigation_main.less
@@ -60,8 +60,7 @@ body{
 			}
 			div.tab-content{
 				position: relative;
-				overflow: visible;
-				overflow-y: hidden;
+				overflow: hidden;
 				&>div{
 					position: relative;
 					top:0;
